[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://images/enemy2_idle/enemy20000.png" type="Texture" id=2]
[ext_resource path="res://images/enemy2_idle/enemy20001.png" type="Texture" id=3]
[ext_resource path="res://images/enemy_die/enemy_die0000.png" type="Texture" id=4]
[ext_resource path="res://images/enemy_die/enemy_die0001.png" type="Texture" id=5]
[ext_resource path="res://images/enemy_die/enemy_die0002.png" type="Texture" id=6]
[ext_resource path="res://images/enemy2_run/enemy2_run0000.png" type="Texture" id=7]
[ext_resource path="res://images/enemy2_run/enemy2_run0001.png" type="Texture" id=8]
[ext_resource path="res://sounds/monster_spawn.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/enemy_die.wav" type="AudioStream" id=10]
[ext_resource path="res://PuffEffect.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 14 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "die",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D"]
z_index = 100
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, 18 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 12, 16 )
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true

[node name="SpawnPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Timer1" type="Timer" parent="."]
wait_time = 3.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5

[node name="DeathPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="PuffEffect" parent="." instance=ExtResource( 11 )]
